perl (5.26.0~rc1-2) UNRELEASED; urgency=medium

  * Make perl-base Break debconf (<< 1.5.61) due to POSIX::tmpnam() usage.
    (See #863071)

 -- Niko Tyni <ntyni@debian.org>  Sun, 21 May 2017 23:00:18 +0300

perl (5.26.0~rc1-1) experimental; urgency=low

  * Import new upstream release candidate.
  * Adopt versioned Provides for the dual lived modules. (Closes: #758100)
  * Upload to experimental from the Debian Perl Sprint in Lloret de Mar.

 -- Niko Tyni <ntyni@debian.org>  Sat, 20 May 2017 11:24:07 +0300

perl (5.24.1-2) unstable; urgency=medium

  * Apply patch from upstream fixing leak in list assignment
    (Closes: #855064)
  * Clarify documentation of 'do' in the face of '.' being removed
    from @INC (Closes: #839536)

 -- Dominic Hargreaves <dom@earth.li>  Thu, 16 Mar 2017 11:11:46 +0000

perl (5.24.1-1) unstable; urgency=medium

  [ Dominic Hargreaves ]
  * Break libexception-class-perl (<< 1.42) since this version fixes an
    @INC related vulnerability potentially exposed by the reversion of the
    base.pm changes below.
  * Remove <nocheck> profile flag for build dependency on file, as it
    is needed outside the test suite (Closes: #850296)

  [ Niko Tyni ]
  * Use https for URLs in the patchlevel list.
  * Refresh cross build support files.

  [ Dominic Hargreaves ]
  * New upstream release

 -- Dominic Hargreaves <dom@earth.li>  Sun, 15 Jan 2017 23:35:20 +0000

perl (5.24.1~rc5-1) experimental; urgency=medium

  * New upstream release candidate which reverts the base.pm @INC fixes
    pending a patch which does not break legitimate use cases.

 -- Dominic Hargreaves <dom@earth.li>  Tue, 03 Jan 2017 21:22:31 +0000

perl (5.24.1~rc4-1) unstable; urgency=medium

  [ Dominic Hargreaves ]
  * Fix Vcs-Git header. Thanks to Axel Beckert (Closes: #839057)
  * Add Breaks on dh-haskell (<< 0.3) (Closes: #839018)
  * Add workaround for optimization test failure on HPPA (Closes: #838613)

  [ Niko Tyni ]