@@ -25,4 +25,7 @@ then
     fi
 fi
 
+dpkg-maintscript-helper rm_conffile \
+    /etc/perl/sitecustomize.pl 5.26.0~rc1-2~ perl -- "$@"
+
 exit 0
