@@ -1,0 +1,6 @@
+#!/bin/sh
+
+set -e
+
+dpkg-maintscript-helper rm_conffile \
+    /etc/perl/sitecustomize.pl 5.26.0~rc1-2~ perl -- "$@"
