@@ -464,9 +464,6 @@ endif
 	  ln -s ../$(fullversion)/Config.pm $$ccdir; \
 	  ln -s ../$(fullversion)/Config_heavy.pl $$ccdir
 
-	# example to strip "." from @INC (CVE-2016-1238)
-	cp debian/sitecustomize.pl $(build)/perl/etc/perl
-
 	# compress
 	find $(build)/*/usr/share/man -type f -print | xargs -r gzip -n9
 	find $(build)/*/usr/share/doc -type f \
